# CCNY_SchedulePro_Frontend

./: .eslintrc.js  .gitignore  .markdownlint.json  Cargo.toml  README.md  app.config.js  app.json  babel.config.js  custom.d.ts  global.css  package-lock.json  package.json  results.json  settings.json  tailwind.config.js  tsconfig.base.json  tsconfig.json
.github/workflows/: codeq-analysisPR.yml  codeql-analysis.yml  label.yml  preview.yml  super-linter.yml  super-linterPR.yml  update.yml
MachineLearning/Professor/: Scraper.py  VaderSentimental.ipynb  extracted_professor_links.txt  package-lock.json  package.json  server.js
MachineLearning/Professor/Links/: link.py
MachineLearning/Professor/config/: default.json
MachineLearning/Professor/models/: Professor.js
app/: _layout.tsx  details.tsx  index.tsx
app/(root)/: _layout.tsx
app/(root)/(tabs)/: _layout.tsx  add.tsx  index.tsx  messages.tsx  profile.tsx  schedule.tsx
app/(tabs)/: Authentication.tsx  _layout.tsx  explore.tsx  index.tsx
app/home/: message.tsx
app/layouts/: material-top-tabs.tsx
components/core/icon/: index.tsx
lib/: cn.ts
prisma/: schema.prisma
prisma/migrations/20240924173408_/: migration.sql
prisma/migrations/20241003123912_added_plain_text_password/: migration.sql
prisma/migrations/20241005111526_added_user_registration_details_model/: migration.sql
prisma/migrations/20241005112014_added_email_to_user_registration_details/: migration.sql
server/: Cargo.toml  diesel.toml
server/docs/: routes_examples.rs
server/src/: api.rest  db.rs  main.rs  models.rs  routes.rs  schema.rs  server.rs  session.rs  test.rs  types.rs  utils.rs
src/: middleware.ts
src/app/: _layout.tsx  authenticationMiddleware.tsx  calendarModal.tsx  index.tsx  onboarding1.tsx  onboarding2.tsx  onboarding3.tsx  onboardingGetStarted.tsx  onboardingWelcome.tsx  signin.tsx  signup.tsx
src/layouts/: material-top-tabs.tsx
src/lib/: env-loader.ts
src/theme/: index.ts
src/utils/: passwordHash.ts
theme/: color.ts  index.ts
(+65 files in other folders)
