[package]
name = "server"
version = "0.1.1"
edition = "2021"


# library for end-to-end messaging
# the JSON feature is not automatically included when it comes to Rust
# reqwest will be used to make server side API call
# ensure that the feature is set to ["json"] as well

[dependencies]
# rocket = { version = "0.5.1", features = ["json"] }
rand = "0.8.4"
reqwest = { version = "0.12", features = ["json"] }
pretty_assertions = "1.4.1"
actix-files = "0.6.6"
actix-web = "4"
actix-web-actors = "4.3.1" # NOTE : deprecation warning
serde = { version = "1.0.217", features = [
  "derive",
] } # needed to use the to_string method? (if not, remove it)
serde_json = "1.0"
diesel = { version = "2.2.6", features = ["postgres", "r2d2"] }
actix-cors = "0.7.0"
actix = "0.13.5"
dotenvy = "0.15.7"
uuid = "1.11.0"
